--- a/Note/数学.md
+++ b/Note/数学.md
@@ -26,3 +26,121 @@ $$
 $$
 $y_i$ 是真实值，$\hat{y_i}$ 是预测值或估计值，$n$ 是样本数量。
 
+
+$$
+\tan(x) = x + \frac{1}{3}x^3 + \frac{2}{15}x^5 + \frac{17}{315}x^7 + \cdots \\
+\tan(x) = \sum_{n=0}^{\infty} a_n x^{2n+1}
+$$
+
+## 克莱姆法则
+
+假定有以下方程组：
+$$
+\left\{\begin{matrix} 
+a_1x + b_1y = c_1 \\
+a_2x + b_2y = c_2
+\end{matrix}\right.
+$$
+则根据克莱姆法则，可以快速的到解：
+$$
+\Delta = 
+\begin{vmatrix}  
+a_1 & b_1 \\
+a_2 & b_2 
+\end{vmatrix},
+x_1 = \frac{1}{\Delta}\begin{vmatrix}  
+c_1 & b_1 \\
+c_2 & b_2 
+\end{vmatrix},
+x_2 = \frac{1}{\Delta}\begin{vmatrix}  
+a_1 & c_1 \\
+a_2 & c_2 
+\end{vmatrix},
+$$
+因此该方程的解为：
+$$
+x_1 = \frac{c_1b_2 - c_2b_1}{a_1b_2 - a_2b_1}, x_2 = \frac{a_1c_2 - a_2c_1}{a_1b_2 - a_2b_1}
+$$
+
+## 棣莫弗公式
+
+$$
+由z = |z|(\cos \text{Arg} z + i \sin \text{Arg} z), 得到(\cos \theta + \sin \theta)^n = \cos (n\theta) + i \sin(n\theta)
+$$
+
+例如，求$(1 + i)^n (n = 1, 2, \cdots)$的实部和虚部。
+
+证：
+$$
+\text{由} 1 + i = \sqrt{2}(\cos \frac{\pi}{4} + i \sin \frac{\pi}{4}), \text{有}(1 + i)^n = (\sqrt{2})^n (\cos \frac{n\pi}{4} + i \sin \frac{n\pi}{4})
+$$
+于是
+$$
+\text{Re}[(1+i)^n] = (\sqrt{2})^n \cos \frac{n\pi}{4}, \text{Im}[(1+i)^n] = (\sqrt{2})^n\sin \frac{n\pi}{4}
+$$
+
+
+# 数学定义
+
+## 符号定义
+
+$\mathbb{R}^2$ 复平面	$\mathbb{C}$ 复数集合
+
+## 封闭性
+
+在某种运算下，如果两个元素属于某个集合，那么它们运算的结果仍然属于该集合。换句话说，集合对该运算是“封闭”的，意味着该集合内的元素进行运算后，结果依然属于这个集合。
+
+## 数学符号
+
+**希腊字母**
+
+| 显示(小写) |   代码(小写)   | 显示(大写) |  代码(大写)  |
+| :--------: | :------------: | :--------: | :----------: |
+|  $\alpha$  |  ``$\alpha$``  |  $\Alpha$  | ``$\Alpha$`` |
+|  $\beta$   |  ``$\beta$``   |  $\Beta$   | ``$\Beta$``  |
+|  $\gamma$  |  ``$\gamma$``  |  $\Gamma$  | ``$\Gamma$`` |
+|  $\delta$  |  ``$\delta$``  |  $\Delta$  |              |
+| $\epsilon$ | ``$\epsilon$`` | $\Epsilon$ |              |
+|  $\zeta$   |  ``$\zeta$``   |  $\Zeta$   |              |
+|   $\eta$   |   ``$\eta$``   |   $\Eta$   |              |
+|  $\theta$  |  ``$\theta$``  |  $\Theta$  |              |
+|  $\iota$   |  ``$\iota$``   |  $\Iota$   |              |
+|  $\kappa$  |  ``$\kappa$``  |  $\Kappa$  |              |
+| $\lambda$  | ``$\lambda$``  | $\Lambda$  |              |
+|   $\mu$    |   ``$\mu$``    |   $\Mu$    |              |
+|   $\nu$    |   ``$\nu$``    |   $\Nu$    |              |
+|   $\xi$    |   ``$\xi$``    |   $\Xi$    |              |
+|    $o$     |    ``$o$``     |    $O$     |              |
+|   $\pi$    |   ``$\pi$``    |   $\Pi$    |              |
+|   $\rho$   |   ``$\rho$``   |   $\Rho$   |              |
+|  $\sigma$  |  ``$\sigma$``  |  $\Sigma$  |              |
+|   $\tau$   |   ``$\tau$``   |   $\Tau$   |              |
+| $\upsilon$ | ``$\upsilon$`` | $\Upsilon$ |              |
+|   $\phi$   |   ``$\phi$``   |   $\Phi$   |              |
+|   $\chi$   |   ``$\chi$``   |   $\Chi$   |              |
+|   $\psi$   |   ``$\psi$``   |   $\Psi$   |              |
+|  $\omega$  |  ``$\omega$``  |  $\Omega$  |              |
+
+**花体字母**
+
+``$\mathbb{}$``: $\mathbb{A}$$\mathbb{B}$$\mathbb{C}$$\mathbb{D}$
+
+``$\mathcal{}$``: $\mathcal{A}$$\mathcal{B}$$\mathcal{C}$$\mathcal{D}$
+
+``$\mathscr{}$``: $\mathscr{A}$$\mathscr{B}$$\mathscr{C}$$\mathscr{D}$
+
+``$\mathrm{}$``: $\mathrm{A}$$\mathrm{B}$$\mathrm{C}$$\mathrm{D}$
+
+``$\mathbf{}$``: $\mathbf{A}$$\mathbf{B}$$\mathbf{C}$$\mathbf{D}$
+
+``$\mathit{}$``: $\mathit{A}$$\mathit{B}$$\mathit{C}$$\mathit{D}$
+
+``$\mathsf{}$``: $\mathsf{A}$$\mathsf{B}$$\mathsf{C}$$\mathsf{D}$
+
+``$\mathtt{}$``: $\mathtt{A}$$\mathtt{B}$$\mathtt{C}$$\mathtt{D}$
+
+``$\mathfrak{}$``: $\mathfrak{A}$$\mathfrak{B}$$\mathfrak{C}$$\mathfrak{D}$
+
+``$\mathring{U}$``$\mathring{U}$
+
+$\overline{U}$
