--- a/Note/数学.md
+++ b/Note/数学.md
@@ -162,5 +162,79 @@ $\overline{U}$
 
 复数的**幅角**：$\text{Arg z} = \theta + 2k\pi$，$Ox$ 轴到 $\vec{OP}$ 沿逆时针方向所形成的角，只有当$z \neq 0$ 幅角才有意义。
 
-幅角的主值：$0 \leq \text{arg z} \lt 2\pi$ 或 $-\pi \lt \text{arg z} \leq \pi$，幅角和主值的关系为 $\text{Arg z} = \text{arg z} + 2k\pi$
+幅角的**主值**：$0 \leq \text{arg z} \lt 2\pi$ 或 $-\pi \lt \text{arg z} \leq \pi$，幅角和主值的关系为 $\text{Arg z} = \text{arg z} + 2k\pi$
 
+复数 $z = x + iy$ 的**三角表示**：$z = |z|(cos \text{Arg z} + sin \text{Arg z})$
+
+复数 $z = x + iy$ 的**共轭**：$\overline{z} = x - iy$
+
+**性质1**：$|z| = |\overline{z}|$, $x = \frac{1}{2}(z + \overline{z})$, $y = \frac{1}{2i}(z - \overline{z})$
+
+**性质2**：$|\text{Rez}| \leq |z|$, $|\text{Imz}| \leq |z|$, $|z| = \sqrt{z \cdot \overline{z}}$
+
+**三角不等式**：$||z_1| - |z_2|| \leq |z_1 \pm z_2| \leq |z_1| + |z_2|$
+
+
+
+例1：试用复数表示圆的方程
+$$
+a(x^2 + y^2) + bx + cy + d = 0 (a \neq 0)
+$$
+其中$a, b, c, d$为实数。
+
+【解】记 $z = x + iy$, 则 $x = \frac{1}{2}(z + \overline{z})$, $y = \frac{1}{2i}(z - \overline{z})$, $x^2 + y^2 = z \cdot \overline{z}$，代入直角坐标方程得
+$$
+az\overline{z} + b\frac{1}{2}(z+\overline{z})+c\frac{1}{2i}(z-\overline{z})+d = 0
+$$
+整理得
+$$
+az\overline{z} + \frac{1}{2}(b - ic)z + \frac{1}{2}(b + ic)\overline{z}+d = 0
+$$
+记 $\beta = \frac{1}{2}(b + ic)$，则原方程可化为
+$$
+az\overline{z} + \overline{\beta}z + \beta\overline{z} + d = 0
+$$
+该方程称为**圆方程的复数形式**。
+
+
+
+例2：设$z_1$和$z_2$是两个复数，证明：
+$$
+|z_1 + z_2|^2 = |z_1|^2 + |z_2|^2 + 2\text{Re}(z_1\overline{z}_2)
+$$
+并由此证明三角不等式。
+
+【解】由复数的运算性质有
+$$
+\begin{align*}
+|z_1 + z_2|^2 
+&= (z_1 + z_2) \cdot \overline{(z_1 + z_2)} = (z_1 + z_2) \cdot (\overline{z}_1 + \overline{z}_2) \\
+&= z_1\overline{z}_1 + z_1\overline{z}_2 + \overline{z}_1z_2 + z_2\overline{z}_2 \\
+&= |z_1|^2 + |z_2|^2 + 2\text{Re}(z_1\overline{z}_2)
+\end{align*}
+$$
+根据 $\text{Re}(z_1\overline{z}_2) \leq |z_1||z_2|$，由上述等式有
+$$
+|z_1 + z_2|^2 \leq |z_1|^2 + |z_2|^2 + 2|z_1||z_2| = (|z_1| + |z_2|)^2
+$$
+两边同时开平方，所以有 $|z_1 + z_2| \leq |z_1| + |z_2|$.同理可得$||z_1| - |z_2|| \leq |z_1 \pm z_2|$.
+
+*PS: 根据任何一个复数的实部大于等于它的模再反号的性质，推导出$2\text{Re}(z_1\overline{z}_2) \geq -2|z_1||z_2|$*
+
+
+
+例3：写出过复平面 $\mathbb{C}$ 上不同两点 $a, b$ 的直线及过不共线三点 $a, b, c$ 的圆的表达式.
+
+【解】（1）直线情形：
+
+若 $z$ 在 $a, b$ 之间，则 $z - a$ 与 $z - b$ 方向相反，因此 $\frac{z - a}{z - b}$ 的幅角主值为 $-\pi$，通过复数的性质知道复数的幅角主值如果是 $\pi$ 或 $-\pi$，那么它的虚部为 $0$.因此有
+$$
+\text{Im}\frac{z - a}{z - b} = 0
+$$
+若 $z$ 在 $a, b$ 之外，则 $z - a$ 与 $z - b$ 方向相同，由此 $\frac{z-a}{z-b}$ 的幅角主值为 $0$，因此同样有
+$$
+\text{Im}\frac{z - a}{z - b} = 0
+$$
+（2）圆情形
+
+![geogebra-export](D:\Downloads\geogebra-export.png)
