--- a/Note/数学.md
+++ b/Note/数学.md
@@ -87,6 +87,20 @@ $$
 
 概率比较：$f(x) <= g(x)$
 
+## 三角公式
+
+正弦加法公式
+$$
+\sin(\theta + \phi) = \sin \theta \cdot \cos \phi + \cos \theta \cdot \sin \phi
+$$
+
+
+余弦加法公式
+$$
+\cos(\theta + \phi) = \cos \theta \cdot \cos \phi - \sin \theta \cdot \sin \phi
+$$
+
+
 # 数学定义
 
 ## 符号定义
@@ -148,13 +162,11 @@ $\mathtt{A}$$\mathtt{B}$$\mathtt{C}$$\mathtt{D}$
 
 $\mathfrak{A}$$\mathfrak{B}$$\mathfrak{C}$$\mathfrak{D}$
 
-**特殊符号**
-
-$\mathring{U}$
-
-$\overline{U}$
-
 # 复数
+
+## 第一章 复数及复平面
+
+### 第一节 复数及几何表示
 
 复数 $z = x + iy$ $\Leftrightarrow$ $\mathbb{R}^2$上的点$P(x, y)$ $\Leftrightarrow$ $\mathbb{R}^2$上的向量$\vec{OP}$
 
@@ -168,11 +180,13 @@ $\overline{U}$
 
 复数 $z = x + iy$ 的**共轭**：$\overline{z} = x - iy$
 
-**性质1**：$|z| = |\overline{z}|$, $x = \frac{1}{2}(z + \overline{z})$, $y = \frac{1}{2i}(z - \overline{z})$
+**性质1**：$|z| = |\overline{z}|$，$z \cdot \overline{z} = |z|^2$， $x = \frac{1}{2}(z + \overline{z})$， $y = \frac{1}{2i}(z - \overline{z})$
 
-**性质2**：$|\text{Rez}| \leq |z|$, $|\text{Imz}| \leq |z|$, $|z| = \sqrt{z \cdot \overline{z}}$
+**性质2**：$|Re \; z| \leq |z|$， $|Im \; z| \leq |z|$， $|z| = \sqrt{z \cdot \overline{z}}$
 
 **三角不等式**：$||z_1| - |z_2|| \leq |z_1 \pm z_2| \leq |z_1| + |z_2|$
+
+复数 $z = x + iy$ 的**倒数**： $\frac{1}{z} = \frac{x}{x^2+y^2} + i\frac{y}{x^2+y^2}$
 
 
 
@@ -241,3 +255,80 @@ $$
 
 如图所示
 
+
+
+### 第二节 复平面的拓扑
+
+邻域：${U}(\alpha, r) \triangleq \{ z | z \in \mathbb{C}, | z - \alpha | \lt r \}$，开圆盘
+
+去心邻域：$\mathring{U} \triangleq \{ z | z \in \mathbb{C}, 0 \lt | z - \alpha | \lt r \}$
+
+闭邻域：$\overline{U}(\alpha, r) \triangleq \{ z | z \in \mathbb{C}, | z - \alpha | \le r \}$，闭圆盘
+
+![邻域](D:\Desktop\ResourcesSets\Image\邻域.PNG)
+
+\> 复平面$\mathbb{C}$上的分类：设$\alpha \in \mathbb{C}$，点集$E \subset \mathbb{C}$
+
+称$\alpha$为$E$的**聚点**：$\forall r \gt 0$，均有$\mathring{U}(\alpha, r) \cap E \ne \emptyset$
+
+称$\alpha$为$E$的**内点**：$\exists r \gt 0$，使得${U}(\alpha, r) \subset E$
+
+称$\alpha$为$E$的**边界点**：$\forall r \gt 0$，有${U}(\alpha, r) \cap E \ne \emptyset, {U}(\alpha, r) \cap E^{\complement} \ne \emptyset$，$E$的边界点的全体记为$\partial E$，$E$的闭包为$\overline{E} = E \cup \partial E$
+
+> $E^{\complement}$是$E$的余集，即$E^{\complement} = \mathbb{C} \setminus E$
+
+
+
+\> 复平面集合$E \subset \mathbb{C}$的分类：
+
+称$E$为开集：若$E$的所有点均为其内点；
+
+称$E$为闭集：若$E^{\complement} = \mathbb{C} \setminus E$为开集；
+
+称$E$为有界集：若$\exists {U}(\alpha, r)$使${U} \subset {U}(\alpha, r)$；
+
+称$E$为紧集：若$E$为有界闭集.
+
+
+
+## 第二章 解析函数
+
+### 第一节 解析函数
+
+#### 第一小节 极限与连续
+
+**定义** 设$E$为复平面$\mathbb{C}$上的点集，若存在法则$f$，使得$\forall z = x + iy \in E$，$\exists w = u + iv \in \mathbb{C}$和它对应，则称$f$为在$E$上确定的**复变数函数**，简称**复变函数**. 记为
+$$
+w = f(z), z \in E \quad \text{或} \quad f:E \to \mathbb{C}, z \mapsto f(z).
+$$
+
+> 在实函数的定义$y = f(x)$中，每个$x$都有唯一的$y$与之对应；在复变函数中并没有唯一限制，只要求存在与之对应的值。
+> $$
+> 复变函数 \left\{
+> \begin{array}{ll}
+> 单值复变函数，例如 w = z^2，w = \frac{z + 1}{z - 1}. \\
+> 多值复变函数，例如 w = Arg \; z，w = \sqrt{z}.\\
+> \end{array}
+> \right.
+> $$
+
+
+
+**定义** 函数$w = f(z)$定义在集合$E$上，$z_0$为聚点，$\alpha$为复常数，若$\forall \epsilon > 0,\exists \delta = \delta(\epsilon) > 0$，使得当$z \in E$且$0 \lt |z - z_0| \lt \delta$时，成立
+$$
+|f(z) - \alpha| \lt \epsilon
+$$
+则称$z$在$E$中趋于$z_0$时，$f(z)$趋于极限$\alpha$. 记为
+$$
+\lim_{z \to z_0, z \in E}{f(z)} = \alpha \quad 或 \quad f(z) \to \alpha \; (z \to z_0, z \in E)
+$$
+
+> 极限定义的几何解释：假设$E$是$z$ - 平面上的一个点集，$f$是$z$ - 平面到$w$-平面之间的一个映射。$z_0$是$z$ - 平面上的一个点，它可能在$E$中，也可能不在$E$中，但它一定是$E$的一个聚点。$\alpha$是$w$ - 平面上的一个点，当$z$趋于$z_0$时，$f(z)$趋于$\alpha$。
+>
+> 定义的解释：在$w$ - 平面中，任给一个以$\alpha$为圆心以$\epsilon$为半径的圆，一定可以找到一个以$z_0$为圆心$\delta$为半径的去心邻域，对于去心邻域中的任意一点$z$通过$w = f(z)$的映射，一定可以变成以$\alpha$为圆心以$\epsilon$为半径圆盘中的某一点。
+
+
+
+定义 
+
+### 第二节 初等函数
